Crash in [@ mozilla::wr::RenderTextureHostSWGL::LockSWGLCompositeSurface]
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox85 | --- | unaffected |
firefox86 | --- | unaffected |
firefox87 | --- | disabled |
People
(Reporter: aosmond, Assigned: aosmond)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Crash report: https://crash-stats.mozilla.org/report/index/0501f93c-fc91-4da4-9c68-abe0e0210216
MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(false) (Unhandled external image format)
Top 10 frames of crashing thread:
0 xul.dll mozilla::wr::RenderTextureHostSWGL::LockSWGLCompositeSurface gfx/webrender_bindings/RenderTextureHostSWGL.cpp:173
1 xul.dll mozilla::wr::wr_swgl_lock_composite_surface gfx/webrender_bindings/RenderTextureHostSWGL.cpp:191
2 xul.dll webrender_bindings::bindings::{{impl}}::lock_composite_surface gfx/webrender_bindings/src/bindings.rs:1439
3 xul.dll webrender::compositor::sw_compositor::{{impl}}::add_surface gfx/wr/webrender/src/compositor/sw_compositor.rs:1626
4 xul.dll webrender::renderer::Renderer::draw_frame gfx/wr/webrender/src/renderer/mod.rs:4398
5 xul.dll webrender::renderer::Renderer::render_impl gfx/wr/webrender/src/renderer/mod.rs:2154
6 xul.dll webrender::renderer::Renderer::render gfx/wr/webrender/src/renderer/mod.rs:1890
7 xul.dll webrender_bindings::bindings::wr_renderer_render gfx/webrender_bindings/src/bindings.rs:634
8 xul.dll mozilla::wr::RendererOGL::UpdateAndRender gfx/webrender_bindings/RendererOGL.cpp:186
9 xul.dll mozilla::wr::RenderThread::UpdateAndRender gfx/webrender_bindings/RenderThread.cpp:481
Comment 1•4 years ago
•
|
||
It seems that fallback from WebRender to WR-WR seem to be related. Old TextureHost might be used.
Assignee | ||
Comment 2•4 years ago
•
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #1)
It seems that fallback from WebRender to WR-WR seem to be related. Old TextureHost might be used.
If that's the case, bug 1688096 will fix this since I unify the SW/HW textures types. There may be more work for texture types I hadn't considered though since I was focused on Windows -- specifically RenderEGLImageTextureHost. Android isn't a problem since we don't allow fallback to SW WR or SW WR popups.
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 3•4 years ago
|
||
Looks like RenderEGLImageTextureHost is used on Android, not Linux:
Assignee | ||
Comment 4•4 years ago
|
||
That leaves RenderDMABUFTextureHost as the last one we might need to worry about.
Comment 5•4 years ago
|
||
Set release status flags based on info from the regressing bug 1689203
Assignee | ||
Comment 6•4 years ago
|
||
I will fix this, but there shouldn't be a need to uplift. We only fallback from HW-WR to SW-WR in nightly. Starting in SW-WR won't have this problem.
Comment 7•4 years ago
•
|
||
When the crash happened, format seemed to be SurfaceFormat::UNKNOWN: (
Comment 8•4 years ago
|
||
This crash signature seems to have disappeared in recent nightlies. I guess bug 1688096 did fix it?
Assignee | ||
Comment 9•4 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #8)
This crash signature seems to have disappeared in recent nightlies. I guess bug 1688096 did fix it?
Yep.
Description
•