Bug 1693208 - Part 1. Implement SWGL bindings for RenderDMABUFTextureHost. r=rmader

In general, this path should not be used, but a user may end up falling
back from WebRender to Software WebRender and we continued using
hardware decoded textures for some display lists. As well, a user in the
future might get a Software WebRender popup that contains a video (e.g.
due to an addon) while primarily using Hardware WebRender. Performance
is less important in this case, although it should work.